change LinkedList to ArrayList because im dumb